Support different embedding types of model response (#1007)
* Support different embedding types of model response
---------
Signed-off-by: zane-neo <zaniu@amazon.com>
Signed-off-by: Martin Gaievski <gaievski@amazon.com>
Co-authored-by: Martin Gaievski <gaievski@amazon.com>